--- a/sass/newland/_sec_10.scss
+++ b/sass/newland/_sec_10.scss
@@ -155,5 +155,11 @@
         .sec_title {
             margin-bottom: 30px;
         }
+
+        .abs_pic {
+            left: -454%;
+            top: 74%;
+            width: 1223%;
+        }
     }
 }
