--- a/sass/newland/_sec_9.scss
+++ b/sass/newland/_sec_9.scss
@@ -47,5 +47,11 @@
         .sec_title {
             margin-bottom: 0;
         }
+
+        .abs_pic {
+            left: -225%;
+            top: 144%;
+            width: 765%;
+        }
     }
 }
