--- a/sass/newland/_footer.scss
+++ b/sass/newland/_footer.scss
@@ -35,3 +35,19 @@ footer {
         }
     }
 }
+@media (max-width: 767.98px) {
+    footer {
+        nav {
+            flex-direction: column-reverse;
+            align-items: center;
+
+            span {
+                margin: 15px 0 0;
+            }
+
+            a {
+                margin-left: 0;
+            }
+        }
+    }
+}
