--- a/sass/newland/_sec_11.scss
+++ b/sass/newland/_sec_11.scss
@@ -27,3 +27,33 @@
         color: #FCFCFC;
     }
 }
+@media (max-width: 767.98px) {
+    .sec_11 {
+        padding: 30px 0;
+
+        br {
+            display: none;
+        }
+
+        img {
+            max-width: 200px;
+        }
+
+        h2 {
+            font-size: 24px;
+            margin-top: 15px;
+        }
+
+        p {
+            font-size: 16px;
+            margin-top: 20px;
+            margin-bottom: 30px;
+        }
+
+        .btn-success {
+            font-size: 16px;
+            width: auto;
+            padding: 15px 30px;
+        }
+    }
+}
