clear project files

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -1,5 +1,4 @@
-@import "fonts";
-@import "icons";
+@import "newland/fonts";
 @import "newland/lightslider";
 @import "newland/common";
 @import "newland/header";
