--- a/sass/newland/_sec_12.scss
+++ b/sass/newland/_sec_12.scss
@@ -59,6 +59,10 @@
         color: #BDBDBD;
         border-color: #454545;
     }
+
+    .table td, .table th {
+        padding-left: 0;
+    }
 }
 @media (max-width: 767.98px) {
     .sec_12 {
