--- a/sass/newland/_sec_3.scss
+++ b/sass/newland/_sec_3.scss
@@ -33,24 +33,24 @@
             max-width: 40%;
         }
     }
-
+    // abs pic
     .circle {
-        right: 17%;
-        bottom: 17%;
+        right: -2%;
+        bottom: -15%;
     }
 
     .stone {
-        left: 54%;
-        top: 10%;
+        left: 56%;
+        top: -13%;
     }
 
     .circle_orange {
-        right: 17%;
-        top: 10%;
+        right: -5%;
+        top: -17%;
     }
 
     .dubl_line {
-        left: 5%;
+        left: -16%;
         top: 40%;
     }
 }
