--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -113,4 +113,26 @@
     .navbar .btn {
         margin-right: 15px;
     }
+
+    .nav-link:focus,
+    .nav-link:hover {
+        background-color: transparent;
+        text-decoration: underline;
+    }
+
+    .dropdown-menu {
+        margin: 0;
+        box-shadow: none;
+        border-radius: 0;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+
+    .dropdown-item {
+        padding: .25rem 1rem;
+    }
+
+    .dropdown-menu::after {
+        display: none;
+    }
 }
