--- a/sass/newland/_sec_2.scss
+++ b/sass/newland/_sec_2.scss
@@ -3,6 +3,19 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
     background: #FFFFFF;
 
+    .media_wrapp {
+        cursor: pointer;
+        transition: all 0.2s;
+        box-shadow: 0 0px 0px rgba(0,0,0,0.2);
+
+        &:hover {
+            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+            border-radius: 8px;
+            transform: scale(1.02);
+            text-decoration: none;
+        }
+    }
+
     .media {
         display: -webkit-flex;
         display: -ms-flex;
