--- a/sass/newland/_sec_4.scss
+++ b/sass/newland/_sec_4.scss
@@ -1,10 +1,9 @@
 .sec_4 {
     background: rgba(88, 181, 139, .1);
     padding: 78px 0 67px;
-
     @media (min-width: 1200px) {
         .container {
-            max-width: 1170px; 
+            max-width: 1170px;
         }
     }
 
@@ -28,6 +27,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 20px;
+        transition: all .2s;
 
         .icon {
             display: block;
@@ -47,6 +47,11 @@
             line-height: 130%;
             color: #4F4F4F;
             margin: 0;
+        }
+
+        &:hover {
+            transform: scale(1.02) translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.15);
         }
     }
 
