start konstantin landing

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -2,8 +2,8 @@
 @import "newland/lightslider";
 @import "newland/common";
 @import "newland/header";
-@import "newland/sec_1";
-@import "newland/sec_2";
+@import "newland/sec_profile";
+@import "newland/sec_bio";
 @import "newland/sec_3";
 @import "newland/sec_4";
 @import "newland/sec_5";
