--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -16,7 +16,6 @@ body {
     .container {
         position: relative;
     }
-
     @media (max-width: 767.98px) {
         overflow: hidden;
     }
@@ -287,4 +286,11 @@ h2 {
     h2 {
         font-size: 24px;
     }
+}
+
+.card {
+    background: #FFFFFF;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    border: none;
 }
