--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -4,6 +4,10 @@
 @import "newland/header";
 @import "newland/sec_profile";
 @import "newland/sec_bio";
+@import "newland/sec_my_contacts";
+@import "newland/sec_my_articles";
+@import "newland/sec_latest_events";
+@import "newland/sec_success_stories";
 @import "newland/sec_3";
 @import "newland/sec_4";
 @import "newland/sec_5";
