--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -275,6 +275,57 @@ h2 {
         }
     }
 }
+
+.card_product {
+    background: #FFFFFF;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+
+    .card_body {
+        padding: 20px 17px 15px;
+    }
+
+    img {
+        width: 100%;
+        border-radius: 8px;
+    }
+
+    h4 {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000000;
+        margin-bottom: 13px;
+    }
+
+    .date {
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 153.59%;
+        color: #828282;
+    }
+
+    .hr {
+        display: block;
+        height: 1px;
+        border-top: 1px solid #D6D6D6;
+        margin-top: 16px;
+        margin-bottom: 19px;
+    }
+
+    .tags {
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 130%;
+        color: #A2A2A2;
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .btn.btn-blue {
+        width: 167px;
+    }
+}
 @media (max-width: 767.98px) {
     body {
         padding-top: 40px;
@@ -293,4 +344,137 @@ h2 {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     border: none;
+}
+// table styles
+
+.table-responsive {
+    padding: 0 16px;
+}
+
+.table {
+    margin-bottom: 2px;
+
+    thead th {
+        vertical-align: bottom;
+        border-bottom: 1px solid #D6D6D6;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 153.59%;
+        color: #A7A7A7;
+        border-top: none;
+        padding-bottom: 13px;
+        padding-top: 15px;
+    }
+
+    th {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+        color: #828282;
+    }
+
+    td,
+    th {
+        vertical-align: middle;
+        padding: 14px;
+    }
+
+    tr {
+        td,
+        th {
+            &:first-of-type {
+                padding-left: 0;
+            }
+
+            &:last-of-type {
+                padding-right: 0;
+            }
+        }
+    }
+
+    .media {
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        color: #7283BE;
+        max-width: 220px;
+
+        img {
+            min-width: 50px;
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+    }
+
+    .expertise {
+        width: 230px;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 130%;
+        color: #A2A2A2;
+    }
+}
+
+.btn.btn-blue {
+    background: #557FAF;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
+    border-radius: 3px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 137px;
+    padding: 7px 15px;
+
+    &:hover {
+        background: #355982;
+    }
+}
+
+.tag_list {
+    margin: 0 0 -5px;
+    margin-bottom: -11px;
+
+    span {
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 130%;
+        text-align: center;
+        color: #FFFFFF;
+        padding: 7px 13px;
+        background: #60C09E;
+        border-radius: 3px;
+        margin: 0 5px 11px;
+        display: inline-block;
+        min-width: 74px;
+    }
+}
+
+.soc_links_wrapp {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: space-between;
+    max-width: 273px;
+    width: 100%;
+
+    .item {
+        display: block;
+        background: #ECECEC;
+        width: 40px;
+        height: 40px;
+        border-radius: 9px;
+        position: relative;
+
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
 }
