--- a/sass/newland/_sec_11.scss
+++ b/sass/newland/_sec_11.scss
@@ -37,6 +37,8 @@
 
         img {
             max-width: 200px;
+            margin: 0 auto;
+            display: block;
         }
 
         h2 {
