--- a/sass/newland/_sec_9.scss
+++ b/sass/newland/_sec_9.scss
@@ -36,9 +36,25 @@
         .card_profile {
             padding: 15px;
 
+            .icon {
+                position: initial;
+                margin: 0 auto;
+            }
+
+            h3 {
+                margin: 20px auto 10px;
+                text-align: center;
+                max-width: 300px;
+                height: auto;
+            }
+
+            p {
+                text-align: center;
+                margin: 0 auto;
+            }
+
             i {
                 font-size: 14px;
-                text-align: left;
                 margin-top: 20px;
                 min-height: 230px;
             }
