--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -4,6 +4,7 @@
 @import "newland/header";
 @import "newland/sec_profile";
 @import "newland/sec_bio";
+@import "newland/sec_offer";
 @import "newland/sec_my_projects";
 @import "newland/sec_my_contacts";
 @import "newland/sec_my_articles";
