--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -1,7 +1,295 @@
 .sec_my_projects {
     padding: 76px 0 110px;
-
+    @media (min-width: 1200px) {
+    	.container {
+    		max-width: 973px;
+    	}
+    }
     .sec_title {
         margin-bottom: 54px;
     }
+    .dubl_line {
+    	left: -50px;
+    	top: 35px;
+    }
+    .dubl_line2 {
+    	top: -55px;
+    	right: -260px;
+    }
+    .cup {
+    	left: -70px;
+    	top: 500px;
+    }
+    .circle_orange {
+    	right: -100px;
+    	bottom: 65px;
+    }
+    .brain {
+    	right: 0;
+    bottom: 750px;
+    }
+    .card {
+    	padding: 25px;
+    	margin-bottom: 40px;
+    	position: relative;
+    	.media-image-abs_wrapp {
+    		width: 220px;
+    		flex-basis: 220px;
+    		text-align: center;
+    		img {
+    			max-width: 220px;
+    		}
+    	}
+    	.media-image {
+    		max-width: 100%;
+    	}
+    	.media.vertical {
+    		flex-direction: column;
+    		position: relative;
+    		.media-body {
+    			margin: 20px 0 0 0;
+    			max-width: 100%;
+    		}
+
+    		.list li {
+    			margin: 5px 0;
+    		}
+
+    		.abs_date {
+    			position: absolute;
+    			right: -5px;
+    			top: -10px;
+    		}
+
+    		@media (min-width: 768px) {
+    			.media-image {
+    				height: 265px;
+    			}
+    		}
+    	}
+    	.stone {
+    		right: -40px;
+		    top: -50px;
+		    z-index: -1;
+		    transform: rotate(150deg);
+    	}
+    	.screen {
+    		right: -70px;
+    		top: 140px;
+    		z-index: -1;
+    	}
+    	.circle {
+    		left: -30px;
+    		top: 215px;
+    		z-index: -1;
+    	}
+    	.clock {
+    		left: -190px;
+    		top: 100px;
+    		z-index: -1;
+    	}
+    	.date_wrap {
+    		float: right;
+    		margin: 0 0 10px 20px;
+    	}
+    	.media-body {
+    		margin-left: 25px;
+    	}
+    	.list {
+    		list-style: none;
+    		padding: 0;
+    		li {
+    			font-size: 14px;
+    			line-height: 25px;
+    			color: #828282;
+    			position: relative;
+    			padding-left: 15px;
+
+    			&::before {
+    				position: absolute;
+    				content: '';
+    				width: 5px;
+    				height: 5px;
+    				border-radius: 50%;
+    				left: 0;
+    				top: 9px;
+    				background-color: #828282;
+    			}
+    		}
+    	}
+    	.card_subtitle {
+    		font-size: 13px;
+    		line-height: 16px;
+    		color: #bdbdbd;
+    		margin: 0;
+    	}
+    	.card_title {
+    		font-size: 18px;
+    		line-height: 22px;
+    		font-weight: bold;
+    		color: #4f4f4f;
+    		text-transform: uppercase;
+    		margin-bottom: 20px;
+
+    		@media (min-width: 767px) {
+    			min-height: 45px;
+    		}
+    	}
+
+    	&.with-date .b-card-body {
+    		margin: 40px 0;
+    	}
+
+    	.b-card-body {
+    		margin: 15px 0;
+    	}
+
+    	.b-card-footer {
+    		display: flex;
+    		align-items: center;
+    		font-size: 13px;
+    		.counter {
+ 				color: #828282;
+ 				margin-right: auto;
+    		}
+
+    		.views {
+    			display: flex;
+    			align-items: center;
+    			color: #D85243;
+    			margin-right: 60px;
+    			margin-left: 10px;
+    		}
+    	}
+
+    	.dropdown-divider {
+    		margin: 15px 0;
+    		width: 100%;
+    	}
+
+    }
+
+    .card-with-table {
+    	.stone2 {
+    		bottom: -50px;
+		    left: -65px;
+		    z-index: -1;
+		    transform: rotate(180deg);
+    	}
+
+    	.dubl_line_vertical {
+			left: -200px;
+			top: 50%;
+    	}
+
+    	.circle2 {
+			right: -170px;
+			bottom: 130px;
+    	}
+
+    	.text {
+    		@media (min-width: 768px) {
+    			margin-left: 25px;
+    		}
+    		.text-title {
+    			font-size: 24px;
+    			line-height: 37px;
+    			color: #4f4f4f;
+    			margin-bottom: 10px;
+    		}
+
+    		p {
+    			font-size: 19px;
+    			line-height: 29px;
+    			color: #828282;
+    		}
+    	}
+    }
+}
+
+.date_wrap {
+	    display: flex;
+	.item {
+		margin-right: 12px;
+		& > span {
+		    font-family: Montserrat;
+		    font-style: normal;
+		    font-weight: 500;
+		    font-size: 12px;
+		    line-height: 15px;
+		    color: #a2a2a2;
+		}
+
+		.date {
+		    margin-top: 3px;
+		    background: #fafafa;
+		    border: 1px solid #d6d6d6;
+		    box-sizing: border-box;
+		    border-radius: 5px;
+		    padding: 6px 9px;
+		    font-size: 13px;
+		    text-align: center;
+
+		    div {
+			    margin-top: 3px;
+			    font-weight: 300;
+			    font-size: 25px;
+			    line-height: 30px;
+			}
+
+		    span {
+			    font-weight: 500;
+			    font-size: 13px;
+			    line-height: 16px;
+			}
+		}
+	}
+}
+@media (min-width: 767px) {
+	.sec_my_projects .card .media .media-image-abs {
+		position: absolute;
+		width: 220px;
+		bottom: 0;
+		left: 25px;
+	}
+}
+@media (max-width: 767.98px) {
+	.sec_my_projects .card {
+		padding: 20px 15px;
+	}
+	.sec_my_projects .card .media {
+		flex-direction: column;
+	}
+
+	.sec_my_projects .card .media-body {
+		margin: 30px 0 0 0;
+	}
+	.sec_my_projects .card .media .media-image-abs_wrapp {
+		width: calc(100% + 30px);
+		border-bottom: 1px solid #e9ecef;
+	}
+
+	.sec_my_projects .card-with-table .text .text-title {
+		font-size: 22px;
+		line-height: 27px;
+	}
+	.sec_my_projects .card-with-table .text p {
+		font-size: 16px;
+		line-height: 25px;
+	}
+}
+
+.border-image {
+	display: block;
+    background-color: rgba(229,229,229,0.5);
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 4px solid #58B58B;
+    border-radius: 50%;
+    box-sizing: border-box;
+    width: 150px;
+    min-width: 150px;
+    height: 150px;
+    margin-bottom: 28px;
 }
