--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -39,4 +39,18 @@
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
     }
+    .circle {
+        bottom: 54%;
+        left: -6%;
+    }
+    .dubl_line {
+        bottom: 12%;
+        right: 20%;
+        transform: rotate(180deg);
+    }
+    .dubl_line_vertical {
+        top: 31%;
+        left: 36%;
+        transform: rotate(90deg);
+    }
 }
