sec_bio text + fixes + mobile + other fixes

--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -288,6 +288,9 @@
 	}
 }
 @media (max-width: 767.98px) {
+    .sec_my_projects {
+        padding: 45px 0;
+    }
 	.sec_my_projects .card {
 		padding: 20px;
 	}
