--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -46,8 +46,13 @@
 @media (max-width: 767.98px) {
 	.sec_offer {
 		.main-txt {
-			font-size: 19px;
+			font-size: 17px;
 			margin-top: 30px;
+		}
+
+		.btn-orange {
+			width: 100%;
+			font-size: 18px;
 		}
 	}
 }
