--- a/sass/newland/_sec_latest_events.scss
+++ b/sass/newland/_sec_latest_events.scss
@@ -27,4 +27,25 @@
             margin-bottom: 0;
         }
     }
+    @media (max-width: 767.98px) {
+        padding: 30px 0 10px;
+
+        .sec_title {
+            margin-bottom: 30px;
+
+            h2 {
+                margin-top: 10px;
+            }
+        }
+
+        .card {
+            padding: 15px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+
+            p {
+                margin-top: 15px;
+                font-size: 14px;
+            }
+        }
+    }
 }
