--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -1,6 +1,7 @@
 .sec_offer {
 	background: #badfcf;
-	padding: 60px 0 70px 0;
+	padding: 60px 0 70px;
+
 	.main-txt {
 		font-weight: 500;
 		font-size: 29px;
@@ -23,8 +24,13 @@
 		.container {
 			max-width: 1120px;
 		}
+
+		.left-col {
+			max-width: 533px;
+		}
+
 		.right-col {
-			padding-left: 40px;
+			max-width: 560px;
 		}
 	}
 }
@@ -42,9 +48,9 @@
 		}
 	}
 }
-
 @media (max-width: 767.98px) {
 	.sec_offer {
+		padding: 30px 0;
 		.main-txt {
 			font-size: 17px;
 			margin-top: 30px;
