--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -1,17 +1,17 @@
 .sec_profile {
     background-color: #daede5;
-    padding: 79px 0 0;
+    padding: 53px 0 0;
     overflow: hidden;
 
     h1 {
         font-size: 46px;
         text-transform: uppercase;
-        margin-bottom: 20px;
+        margin-bottom: 29px;
     }
     @media (min-width: 1200px) {
         .container {
             max-width: 1120px;
-        }   
+        }
     }
 
     .undertitle {
@@ -19,9 +19,13 @@
         font-size: 21px;
         line-height: 130%;
         text-transform: uppercase;
-        max-width: 480px;
         color: #828282;
         margin-bottom: 38px;
+
+        i {
+            display: block;
+            margin-top: 44px;
+        }
     }
 
     .img_wrapp {
@@ -57,7 +61,7 @@
             align-items: flex-start;
 
             &:not(:last-of-type) {
-                margin-bottom: 21px;
+                margin-bottom: 14px;
             }
 
             img {
@@ -66,6 +70,10 @@
                 display: inline-block;
                 margin-top: 3px;
                 margin-right: 15px;
+            }
+
+            b {
+                font-size: 20px;
             }
         }
     }
@@ -83,7 +91,7 @@
     // abs pic
     .circle {
         top: 47%;
-        left: 48%;
+        left: 49%;
         opacity: 0.4;
     }
 
@@ -93,42 +101,59 @@
     }
 }
 @media (max-width: 767.98px) {
-    .sec_1 {
+    .sec_profile {
         overflow: hidden;
-        padding: 30px 0;
+
+        h1 {
+            font-size: 32px;
+            margin-bottom: 25px;
+        }
 
         .undertitle {
-            font-size: 17px;
-            margin-bottom: 30px;
-        }
+            font-size: 16px;
 
-        .col-md-4 {
-            position: initial;
-        }
-
-        .col-md-8 {
-            z-index: 1;
-        }
-
-        .img_wrapp {
-            position: absolute;
-            top: 46%;
-            left: 103%;
-
-            img {
-                width: 100%;
+            i {
+                margin-top: 10px;
             }
         }
 
-        .circle {
-            top: 72%;
-            left: 16%;
-            width: 38px;
+        .card {
+            padding: 20px 15px;
+            margin-bottom: 40px;
+
+            li {
+                font-size: 14px;
+            }
         }
 
-        .line,
-        .line-light {
-            display: none;
+        .works {
+            align-items: flex-start;
+            flex-wrap: wrap;
+            margin: 0;
+            padding: 0 15px;
+
+            img {
+                display: inline-block;
+                margin-bottom: 30px;
+                opacity: 0.7;
+            }
+        }
+
+        .img_wrapp {
+            height: 400px;
+
+            img {
+                width: 100%;
+                right: initial;
+                left: 50%;
+                transform: translateX(-50%);
+                max-width: 345px;
+            }
+        }
+        // abs icons
+        .dubl_line_vertical {
+            right: -2%;
+            top: 3%;
         }
     }
 }
