--- a/sass/newland/_sec_success_stories.scss
+++ b/sass/newland/_sec_success_stories.scss
@@ -46,4 +46,8 @@
         bottom: 8%;
         transform: rotate(215deg);
     }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+    }
 }
