--- a/sass/newland/_sec_my_articles.scss
+++ b/sass/newland/_sec_my_articles.scss
@@ -1,6 +1,5 @@
 .sec_my_articles {
     padding: 84px 0 38px;
-
     @media (min-width: 1200px) {
         .container {
             max-width: 928px;
@@ -19,18 +18,18 @@
         margin-bottom: 90px;
         max-width: 438px;
     }
-
     // abs icons
     .dubl_line_vertical {
         left: -16%;
         top: 24%;
         transform: rotate(-90deg);
     }
+
     .dubl_line {
         bottom: 19%;
         right: -19%;
     }
-  
+
     .circle_orange {
         right: -10%;
         top: 10%;
@@ -39,5 +38,16 @@
     .circle {
         bottom: 17%;
         left: -20%;
+    }
+    @media (max-width: 767.98px) {
+        padding: 30px 0 0;
+
+        .sec_title {
+            margin-bottom: 30px;
+        }
+
+        .card_wrapp {
+            margin-bottom: 40px;
+        }
     }
 }
