--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -349,7 +349,8 @@
 
     .sec_my_projects .card .btn-blue {
         width: 100%;
-        margin-top: 10px;
+        margin-top: 15px;
+        padding: 10px;
     }
 
     .sec_my_projects .card .b-card-footer {
