--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -1,22 +1,45 @@
 .sec_offer {
-	background: #badfcf;
-	padding: 60px 0 70px;
+	background: #daede5;
+	padding: 79px 0 81px;
 
 	.main-txt {
-		font-weight: 500;
-		font-size: 29px;
-		line-height: 130%;
-		color: #4F4F4F;
-		margin-bottom: 20px;
+		h2 {
+			font-weight: 500;
+			font-size: 29px;
+			line-height: 130%;
+			margin: 0 0 17px;
+		}
+
+		p {
+			margin: 0;
+			padding: 0;
+			font-weight: 500;
+			font-size: 19px;
+			line-height: 130%;
+			color: #828282;
+			margin-bottom: 30px;
+		}
 	}
 
-	.btn-orange {
+	.btn-blue {
 		color: #fff;
 		text-transform: uppercase;
 		width: 280px;
 		text-align: center;
 		padding: 13px;
 		font-size: 20px;
+		line-height: 130%;
+	}
+
+	.dubl_line {
+		top: 74%;
+		left: 93%;
+		transform: rotateX(180deg) rotateY(180deg);
+	}
+
+	.circle_orange {
+		left: -10%;
+		top: 50%;
 	}
 }
 @media (min-width: 1200px) {
@@ -51,14 +74,24 @@
 @media (max-width: 767.98px) {
 	.sec_offer {
 		padding: 30px 0;
+
 		.main-txt {
 			font-size: 17px;
 			margin-top: 30px;
 		}
 
-		.btn-orange {
-			width: 100%;
-			font-size: 18px;
+		.btn-blue {
+			font-size: 16px;
+		}
+
+		.main-txt {
+			p {
+				font-size: 15px;
+			}
+
+			h2 {
+				font-size: 24px;
+			}
 		}
 	}
 }
