--- a/sass/newland/_sec_9.scss
+++ b/sass/newland/_sec_9.scss
@@ -28,6 +28,40 @@
         width: 113%;
     }
 }
+
+.sleder_wrapp {
+    position: relative;
+}
+
+.arrow-next,
+.arrow-prev {
+    position: absolute;
+    top: 50%;
+    display: block;
+    cursor: pointer;
+    opacity: .5;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    svg {
+        width: 25px;
+        height: 47px;
+    }
+}
+
+.arrow-prev {
+    left: -40px;
+    transform: translateY(-50%);
+    display: block;
+}
+
+.arrow-next {
+    right: -40px;
+    transform: translateY(-50%) rotateY(180deg);
+}
+
 @media (max-width: 767.98px) {
     .sec_9 {
         padding: 30px 0 0;
