konstantin  product start

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -2,6 +2,8 @@
 @import "newland/lightslider";
 @import "newland/common";
 @import "newland/header";
+@import "newland/sec_product";
+@import "newland/sec_goal";
 @import "newland/sec_profile";
 @import "newland/sec_bio";
 @import "newland/sec_offer";
