sec_about_course, sec_programm

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -4,6 +4,9 @@
 @import "newland/header";
 @import "newland/sec_product";
 @import "newland/sec_goal";
+@import "newland/sec_about_course";
+@import "newland/sec_programm";
+@import "newland/sec_your_result";
 @import "newland/sec_profile";
 @import "newland/sec_offer";
 @import "newland/sec_my_projects";
