sec_cost, sec_tabs, sec_gifts, sec_are_you_ready

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -7,6 +7,10 @@
 @import "newland/sec_about_course";
 @import "newland/sec_programm";
 @import "newland/sec_your_result";
+@import "newland/sec_are_you_ready";
+@import "newland/sec_tabs";
+@import "newland/sec_gifts";
+@import "newland/sec_cost";
 @import "newland/sec_profile";
 @import "newland/sec_offer";
 @import "newland/sec_my_projects";
