--- a/sass/newland/_sec_success_stories.scss
+++ b/sass/newland/_sec_success_stories.scss
@@ -1,5 +1,6 @@
 .sec_success_stories {
-    padding: 62px 0 150px;
+    padding: 94px 0 150px;
+    background: rgba(88,181,139,0.1);
 
     .sec_title {
         margin-bottom: 62px;
