--- a/sass/newland/_sec_tabs.scss
+++ b/sass/newland/_sec_tabs.scss
@@ -1,19 +1,8 @@
-.sec_your_result {
-    background: rgba(88, 181, 139, .1);
-    padding: 78px 0 67px;
-    @media (min-width: 1200px) {
-        .container {
-            max-width: 1170px;
-        }
-    }
+.sec_tabs {
+    padding: 77px 0 132px;
 
     .sec_title {
-        margin-bottom: 40px;
-    }
-
-    .col-4 {
-        padding-left: 10px;
-        padding-right: 10px;
+        margin-bottom: 96px;
     }
 
     .media {
@@ -27,7 +16,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 20px;
-        transition: all .2s;
+        transition: all 0.2s;
 
         .icon {
             display: block;
@@ -55,33 +44,51 @@
         }
     }
 
-    .stone_orange {
-        top: 20%;
-        left: -3%;
+    .for_managers .media .icon {
+        background-image: url("../img/sec_tabs/for_managers.svg");
     }
 
-    .circle {
-        top: 2%;
-        left: 12%;
+    .for_top_managers .media .icon {
+        background-image: url("../img/sec_tabs/for_top_managers.svg");
     }
 
-    .dubl_line {
-        top: 92%;
-        right: 80%;
+    .for_business_owners .media .icon {
+        background-image: url("../img/sec_tabs/for_business_owners.svg");
+    }
+}
+
+.nav-pills {
+    margin-bottom: 40px;
+    
+    .nav-link {
+        padding-left: 0;
+        padding-right: 0;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 27px;
+        padding-bottom: 5px;
+        border-bottom: solid 3px transparent;
+        border-radius: 0;
+        margin-right: 72px;
+        color: #828282;
+        cursor: pointer;
+
+        &:hover {
+            background-color: transparent;
+            color: #4f4f4f;
+            border-color: rgba(240, 167, 68, 0.2);
+        }
     }
 
-    .dubl_line.vertical {
-        right: 10%;
-        top: 3%;
-    }
-
-    .circle_orange {
-        bottom: 4%;
-        right: 13%;
+    .nav-link.active,
+    .show > .nav-link {
+        background-color: transparent;
+        color: #4f4f4f;
+        border-color: #F0A744;
     }
 }
 @media (max-width: 767.98px) {
-    .sec_your_result {
+    .sec_tabs {
         overflow: hidden;
         padding: 40px 0 20px;
 
@@ -97,35 +104,6 @@
             .icon {
                 margin-right: 15px;
             }
-        }
-        // abs pic
-        .circle {
-            top: 8%;
-            left: -20%;
-            width: 200px;
-        }
-
-        .circle_orange {
-            bottom: -13%;
-            right: 13%;
-            width: 400px;
-        }
-
-        .dubl_line.vertical {
-            right: -21%;
-            top: 18%;
-            width: 193px;
-        }
-
-        .dubl_line {
-            top: 60%;
-            right: -6%;
-            width: 200px;
-        }
-
-        .stone_orange {
-            top: -7%;
-            left: -13%;
         }
     }
 }
