sec_lesson_steps

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -25,7 +25,7 @@
 @import "newland/sec_6";
 @import "newland/sec_7";
 @import "newland/sec_8";
-@import "newland/sec_9";
+@import "newland/sec_lesson_steps";
 @import "newland/sec_10";
 @import "newland/sec_11";
 @import "newland/sec_12";
