--- a/sass/newland/_sec_lesson_steps.scss
+++ b/sass/newland/_sec_lesson_steps.scss
@@ -1,4 +1,4 @@
-.sec_9 {
+.sec_lesson_steps {
     padding: 76px 0 84px;
     background: #fbf3e9;
 
@@ -29,7 +29,7 @@
     }
 }
 @media (max-width: 767.98px) {
-    .sec_9 {
+    .sec_lesson_steps {
         padding: 30px 0 0;
         overflow: hidden;
 
