--- a/sass/newland/_sec_lesson_steps.scss
+++ b/sass/newland/_sec_lesson_steps.scss
@@ -17,7 +17,7 @@
         p {
             min-height: 42px;
             font-weight: 600;
-            max-width: 250px;
+            max-width: 261px;
         }
     }
 
@@ -28,6 +28,39 @@
         width: 113%;
     }
 }
+
+.sleder_wrapp {
+    position: relative;
+}
+
+.arrow-next,
+.arrow-prev {
+    position: absolute;
+    top: 50%;
+    display: block;
+    cursor: pointer;
+    opacity: 0.5;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    svg {
+        width: 25px;
+        height: 47px;
+    }
+}
+
+.arrow-prev {
+    left: -40px;
+    transform: translateY(-50%);
+    display: block;
+}
+
+.arrow-next {
+    right: -40px;
+    transform: translateY(-50%) rotateY(180deg);
+}
 @media (max-width: 767.98px) {
     .sec_lesson_steps {
         padding: 30px 0 0;
@@ -36,9 +69,25 @@
         .card_profile {
             padding: 15px;
 
+            .icon {
+                position: initial;
+                margin: 0 auto;
+            }
+
+            h3 {
+                margin: 20px auto 10px;
+                text-align: center;
+                max-width: 300px;
+                height: auto;
+            }
+
+            p {
+                text-align: center;
+                margin: 0 auto;
+            }
+
             i {
                 font-size: 14px;
-                text-align: left;
                 margin-top: 20px;
                 min-height: 230px;
             }
