--- a/sass/newland/_sec_about_course.scss
+++ b/sass/newland/_sec_about_course.scss
@@ -66,4 +66,20 @@
             }
         }
     }
+    // abs_pic
+    .circle {
+        top: 50%;
+        left: 96%;
+        width: 60px;
+    }
+
+    .circle_orange {
+        left: -10%;
+        top: 70%;
+    }
+
+    .dubl_line {
+        top: 8%;
+        left: 75%;
+    }
 }
