--- a/sass/newland/_sec_programm.scss
+++ b/sass/newland/_sec_programm.scss
@@ -5,6 +5,27 @@
     .sec_title {
         margin-bottom: 40px;
     }
+
+    // abs_pic
+    .dubl_line_vertical {
+        left: -3%;
+        top: 23%;
+    }
+
+    .dubl_line {
+        left: 95%;
+        top: 90%;
+        transform: rotate(180deg);
+    }
+
+    .circle {
+        top: 80%;
+    }
+
+    .circle_orange {
+        top: 20%;
+        left: 100%;
+    }
 }
 
 .accordion {
