--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -131,6 +131,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            margin-right: 30px;
 
             li {
                 font-size: 14px;
@@ -177,7 +178,7 @@
             display: -ms-flex;
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-end;
             margin: 0;
 
             .right {
