--- a/sass/newland/_sec_programm.scss
+++ b/sass/newland/_sec_programm.scss
@@ -84,6 +84,7 @@
                     font-size: 18px;
                     line-height: 22px;
                     color: #557FAF;
+                    text-align: left;
                 }
 
                 img {
