--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -111,8 +111,19 @@
         overflow: hidden;
 
         h1 {
-            font-size: 32px;
-            margin-bottom: 25px;
+            font-size: 24px;
+            margin: 15px 0;
+        }
+
+        .undertitle_wrapp {
+            flex-direction: column-reverse;
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-bottom: 35px;
+
+            .date_wrap {
+                margin-top: 20px;
+            }
         }
 
         .undertitle {
@@ -126,6 +137,8 @@
         .card {
             padding: 20px 15px;
             margin-bottom: 40px;
+            box-shadow: none;
+            border: 1px solid #d6d6d6;
 
             p {
                 font-size: 14px;
@@ -133,7 +146,7 @@
         }
 
         .img_wrapp {
-            height: 400px;
+            height: 300px;
 
             img {
                 width: 100%;
@@ -143,10 +156,20 @@
                 max-width: 345px;
             }
         }
+
+        .card__footer {
+            .btn-success {
+                padding: 15px;
+            }
+
+            .price {
+                font-size: 24px;
+            }
+        }
         // abs icons
         .dubl_line_vertical {
-            right: -2%;
-            top: 3%;
+            right: 5%;
+            top: 22%;
         }
     }
 }
