--- a/sass/newland/_sec_about_course.scss
+++ b/sass/newland/_sec_about_course.scss
@@ -83,3 +83,62 @@
         left: 75%;
     }
 }
+@media (max-width: 767.98px) {
+    .sec_about_course {
+        padding: 40px 0;
+
+        .sec_title {
+            margin-bottom: 40px;
+        }
+
+        .media_wrapp {
+            height: 100%;
+            padding: 30px 20px 30px 30px;
+
+            img {
+                width: 50px;
+                height: auto;
+            }
+        }
+
+        .media {
+            .text {
+                margin-left: 20px;
+            }
+
+            &:not(:last-of-type) {
+                margin-bottom: 30px;
+            }
+
+            span {
+                font-size: 15px;
+                line-height: 130%;
+            }
+
+            p {
+                font-size: 22px;
+                line-height: 130%;
+            }
+        }
+
+        .card_txt {
+            margin-top: 40px;
+        }
+
+        .card_txt {
+            padding: 20px 15px;
+
+            ul {
+                padding-left: 20px;
+
+                li {
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 160%;
+                    color: #828282;
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
