--- a/sass/newland/_sec_are_you_ready.scss
+++ b/sass/newland/_sec_are_you_ready.scss
@@ -28,4 +28,17 @@
         line-height: 130%;
         padding: 15px;
     }
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title {
+            p {
+                font-size: 16px;
+            }
+
+            h2 {
+                font-size: 26px;
+            }
+        }
+    }
 }
