--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -130,8 +130,7 @@
         .list {
             list-style: none;
             padding: 0;
-            margin: 0;
-            margin-right: 30px;
+            margin: 0 30px 0 0;
 
             li {
                 font-size: 14px;
@@ -204,6 +203,26 @@
                     line-height: 130%;
                     width: 294px;
                     padding: 15px;
+                }
+            }
+        }
+    }
+    @media (max-width: 767.98px) {
+        .card {
+            .media {
+                flex-direction: column;
+            }
+
+            .b-card-body {
+                margin: 0;
+                flex-direction: column;
+
+                .right {
+                    margin-top: 30px;
+                }
+
+                .list {
+                    margin: 0;
                 }
             }
         }
