--- a/sass/newland/_sec_gifts.scss
+++ b/sass/newland/_sec_gifts.scss
@@ -48,4 +48,27 @@
         top: 94%;
         left: 60%;
     }
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title {
+            margin-bottom: 40px;
+        }
+
+        .card_profile {
+            h3 {
+                font-size: 24px;
+                height: auto;
+                margin: 25px auto 10px;
+            }
+
+            img {
+                margin: 15px auto 0;
+            }
+
+            p {
+                max-width: 100%;
+            }
+        }
+    }
 }
