--- a/sass/newland/_sec_goal.scss
+++ b/sass/newland/_sec_goal.scss
@@ -63,11 +63,16 @@
     }
 }
 @media (max-width: 767.98px) {
-    .sec_bio {
+    .sec_goal {
         padding: 30px 0;
 
         .card {
             padding: 15px;
+        }
+
+        .img_wrapp {
+            height: 0;
+            margin-top: 130px;
         }
 
         p {
