--- a/sass/newland/_sec_lesson_steps.scss
+++ b/sass/newland/_sec_lesson_steps.scss
@@ -134,15 +134,27 @@
 }
 @media (max-width: 767.98px) {
     .sec_lesson_steps {
-        padding: 30px 0 0;
+        padding: 30px 0;
         overflow: hidden;
 
         .card_profile {
             padding: 15px;
+            flex-direction: column;
 
             .icon {
                 position: initial;
                 margin: 0 auto;
+                width: 100%;
+                height: auto;
+                min-width: 0;
+
+                img {
+                    position: initial;
+                    transform: none;
+                    display: inline-block;
+                    width: 100%;
+                    height: auto;
+                }
             }
 
             h3 {
@@ -162,10 +174,15 @@
                 margin-top: 20px;
                 min-height: 230px;
             }
+
+            .text {
+                margin-left: 0;
+                text-align: left;
+            }
         }
 
         .sec_title {
-            margin-bottom: 0;
+            margin-bottom: 25px;
         }
 
         .abs_pic {
