--- a/sass/newland/_sec_programm.scss
+++ b/sass/newland/_sec_programm.scss
@@ -5,7 +5,6 @@
     .sec_title {
         margin-bottom: 40px;
     }
-
     // abs_pic
     .dubl_line_vertical {
         left: -3%;
@@ -25,6 +24,9 @@
     .circle_orange {
         top: 20%;
         left: 100%;
+    }
+    @media (max-width: 767.98px) {
+        padding: 40px 0;
     }
 }
 
@@ -118,6 +120,28 @@
 
         &.show ~ .card-header img {
             transform: rotateX(180deg);
+        }
+    }
+    @media (max-width: 767.98px) {
+        & > .card .card-header {
+            h2 {
+                flex-direction: column;
+                align-items: flex-start;
+                font-size: 13px;
+            }
+
+            i {
+                font-size: 14px;
+            }
+
+            button {
+                padding-left: 0;
+                span {
+                   font-size: 16px;
+                   line-height: 22px;
+                   text-align: left;
+               }
+            }
         }
     }
 }
