--- a/sass/newland/_sec_your_result.scss
+++ b/sass/newland/_sec_your_result.scss
@@ -86,7 +86,7 @@
         padding: 40px 0 20px;
 
         .sec_title {
-            margin-bottom: 30px;
+            margin-bottom: 30px !important;
         }
 
         .media {
@@ -103,6 +103,7 @@
             top: 8%;
             left: -20%;
             width: 200px;
+            display: none;
         }
 
         .circle_orange {
@@ -121,6 +122,7 @@
             top: 60%;
             right: -6%;
             width: 200px;
+            display: none;
         }
 
         .stone_orange {
