--- a/sass/newland/_sec_gifts.scss
+++ b/sass/newland/_sec_gifts.scss
@@ -68,6 +68,8 @@
 
             p {
                 max-width: 100%;
+                text-align: center;
+                margin-top: 10px;
             }
         }
     }
