--- a/sass/newland/_sec_success_stories.scss
+++ b/sass/newland/_sec_success_stories.scss
@@ -61,5 +61,13 @@
                 min-height: 1px;
             }
         }
+
+        .card_wrapp {
+            max-width: 100%;
+        }
+
+        .dubl_line {
+            display: none;
+        }
     }
 }
