--- a/sass/newland/_sec_success_stories.scss
+++ b/sass/newland/_sec_success_stories.scss
@@ -20,7 +20,11 @@
 
         i {
             text-align: left;
-            min-height: 300px;
+            min-height: 280px;
+        }
+
+        p {
+            min-height: 42px;
         }
     }
 
