--- a/sass/newland/_sec_my_articles.scss
+++ b/sass/newland/_sec_my_articles.scss
@@ -39,6 +39,16 @@
         bottom: 17%;
         left: -20%;
     }
+
+    .card_product {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+
+        .card_body {
+            margin-top: auto;
+        }
+    }
     @media (max-width: 767.98px) {
         padding: 30px 0 0;
 
