--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -148,6 +148,7 @@
                 left: 50%;
                 transform: translateX(-50%);
                 max-width: 345px;
+                bottom: -100px;
             }
         }
         // abs icons
