--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -90,7 +90,12 @@
     display: flex;
     align-items: center;
     background-color: #ffffff;
-    padding: 3px 17px 5px 12px;
+    padding: 3px 17px 5px;
+
+    span {
+        color: #4f4f4f;
+        font-weight: 700;
+    }
 }
 
 .nav-link {
