--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -34,7 +34,7 @@
 
         img {
             position: absolute;
-            bottom: 0;
+            bottom: -60px;
             left: 0;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
