--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -35,10 +35,10 @@
 
         img {
             position: absolute;
-            bottom: 0;
-            right: -40px;
-            width: 550px;
-            filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
+            bottom: -730px;
+            right: 0;
+            width: 350px;
+            filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.1));
         }
     }
 
@@ -143,12 +143,12 @@
             height: 300px;
 
             img {
-                width: 100%;
+                width: 300px;
                 right: initial;
                 left: 50%;
                 transform: translateX(-50%);
                 max-width: 345px;
-                bottom: 0;
+                bottom: -850px;
             }
         }
         // abs icons
