--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -165,7 +165,7 @@
             margin-top: 21px;
 
             img {
-                width: 100%;
+                width: 210px;
                 right: initial;
                 left: 50%;
                 transform: translateX(-50%);
