--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -41,8 +41,8 @@
         img {
             position: absolute;
             bottom: 0;
-            right: -40px;
-            width: 420px;
+            right: 0;
+            width: 350px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
