--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -44,7 +44,8 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            width: 370px;
+            width: 255px;
+            transform: rotateY(180deg);
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
@@ -169,7 +170,7 @@
                 right: initial;
                 left: 50%;
                 transform: translateX(-50%);
-                max-width: 345px;
+                max-width: 150px; 
                 filter: none;
             }
         }
