very little fises

--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -156,6 +156,7 @@
             height: 0;
 
             img {
+                display: none;
                 width: 100%;
                 right: initial;
                 left: 76%;
