--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -162,6 +162,7 @@
                 bottom: -220px;
                 transform: translateX(-50%);
                 max-width: 345px;
+                display: none;
             }
         }
         // abs icons
