updated: nav refractored

--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -86,8 +86,8 @@ body {
 }
 
 .btn-success-2 {
-    background: #56a17f;
-    border-color: #56a17f;
+    background: #E5C17C;
+    border-color: #E5C17D;
 
     &:hover {
         background: #548b72;
