rel: demo version ready

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -10,6 +10,10 @@
 @import "newland/sec_my_articles";
 @import "newland/sec_latest_events";
 @import "newland/sec_success_stories";
+@import "newland/sec_bonus";
+@import "newland/sec_duplicated";
+@import "newland/sec_methods";
+@import "newland/sec_form";
 @import "newland/sec_your_mentor";
 @import "newland/sec_3";
 @import "newland/sec_4";
