--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -2,8 +2,11 @@ html, body {
   width: 100%;
   margin:0;
   padding:0;
-}
 
+}
+body {
+  overflow-x: hidden;
+}
 body {
   background-color: #FBFBFB;
   font-family: 'Montserrat';
