--- a/sass/newland/sec_bonus.scss
+++ b/sass/newland/sec_bonus.scss
@@ -3,12 +3,27 @@
   background-color: #242323;
 
   h2 {
-    color: #ffffff;
+    color: #FCFCFC;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 140%;
+    /* or 42px */
+    text-align: right;
+    text-transform: uppercase;
   }
 
   h3 {
     color: #E5C17C;
-    font-size: 15px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 140%;
+    /* identical to box height, or 28px */
+
+    text-align: right;
   }
 
   .btn-success-2 {
