--- a/sass/newland/sec_form.scss
+++ b/sass/newland/sec_form.scss
@@ -2,16 +2,46 @@
   background-color: #242323;
 
   h2 {
-    color: #ffffff;
-    font-size: 29px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 140%;
+    /* or 45px */
+    color: #FCFCFC;
+    text-transform: uppercase;
   }
 
+  .img-box {
+    position: relative;
+    z-index: 0;
+
+    img {
+      position: absolute;
+    }
+  }
 
   .form-group {
     margin-top: 30px;
 
     label {
-      color: white;
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 13px;
+      line-height: 120%;
+      color: #E5C17C;
+    }
+
+    .form-control {
+      padding: 27px 13px;
+      border-radius: 0;
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 153.59%;
+      color: #BDBDBD;
     }
   }
 
